refactor: 调整 Shell 接口